# paper-ladder

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  OPENALEX_API.md
src/paper_ladder/: __init__.py  aggregator.py  cli.py  config.py  downloader.py  models.py  retry.py  utils.py
src/paper_ladder/analysis/: __init__.py  metrics.py  network.py
src/paper_ladder/citation/: __init__.py  formats.py
src/paper_ladder/clients/: __init__.py  arxiv.py  base.py  biorxiv.py  core.py  crossref.py  dblp.py  doaj.py  elsevier.py  google_scholar.py  google_scholar_scraper.py  medrxiv.py  openalex.py  pubmed.py  semantic_scholar.py  wos.py
src/paper_ladder/extractors/: __init__.py  base.py  html_extractor.py  pdf_extractor.py  structured_extractor.py
tests/: __init__.py  conftest.py  test_aggregator.py  test_models.py  test_retry.py  test_utils.py
tests/test_analysis/: __init__.py  test_metrics.py  test_network.py
tests/test_citation/: __init__.py  test_formats.py
tests/test_clients/: test_openalex.py
tests/test_extractors/: __init__.py  test_html_extractor.py  test_structured_extractor.py
